--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -47,7 +47,8 @@
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
     <h3><strong>철학</h3></strong>
-      [내 안의 나를 깨우는 장자 외편]-장자
+      [내 안의 나를 깨우는 장자 외편]-장자<br>
+      [그래서 철학이 필요해]-고바야시 쇼테이
     <h3><strong>심리학</h3></strong>
       [나도 아직 나를 모른다]-허지원<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원
@@ -69,7 +70,7 @@
       <h2>2020년 1월 독서</h2>
         <li>경제: [앞으로 10년 경제 대위기가 온다]-정동희</li>
         <li>역사:</li>
-        <li>철학:</li>
+        <li>철학: [그래서 철학이 필요해]-고바야시 쇼테이</li>
         <li>심리학/처세술:</li>
         <li>과학:</li>
         <br>
