--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -233,6 +233,9 @@
       <a href="https://www.youtube.com/watch?v=pnXCTOIc8Po&list=WL&index=3&t=0s" target="_blank" title="2020년 1월 게임">
         2020년 1월 신작게임 기대작 TOP5</a><br>
 
+      <a href="https://www.youtube.com/watch?v=j5HJpMElQ70&list=WL&index=2&t=342s" target="_blank" title="용사게임">
+        갓겜 서비스한 놈들 어딨냐?[용사식당]</a><br>
+
     <br>
 
     <ol class="table">
