--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -137,7 +137,10 @@
           - 돈, 뜨겁게 사랑하고 차갑게 다루어라 - 앙드레 코스톨라니<br>
           - 월가의 영웅 - 피터 린치<br>
           - 현명한 투자자 - 벤자민 그레이엄<br>
-          - 위대한 기업에 투자하라 - 필립 피셔<br>
+          - 위대한 기업에 투자하라 - 필립 피셔<br><br>
+
+     <a href="https://www.youtube.com/watch?v=1qn-8Gk2I04" target="_blank" title="버핏지수">
+        버핏지수(Buffett Indicator)로 살펴보는 대한민국 증시 밸류에이션, 고평가일까 저평가일까</a><br>
 
 
 
