--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -796,7 +796,10 @@
         </p>
 
       <a href="https://www.youtube.com/watch?v=hZzSRMvQjqg&list=WL&index=6" target="_blank" title="조던피터슨">
-        세상을 구한 남자, 조던 피터슨 이야기</a><br>
+        세상을 구한 남자, 조던 피터슨 이야기</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=5LgKT-Lx9bk" target="_blank" title="부의흐름">
+        가난한 사람은 평생 거부하는 부의 흐름을 타고 경제적 자유를 얻는 방법</a><br>
 
 
 
