--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -42,7 +42,8 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [앞으로 10년 경제 대위기가 온다]-정동희<br>
       [부의 본능]-브라운스톤<br>
-      [빅스텝]-박혜정
+      [빅스텝]-박혜정<br>
+      [직장인의 은퇴없는 실전 주식투자]-차영주
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
@@ -76,6 +77,7 @@
         <br>
         <li>경제: [부의 본능]-브라운스톤</li>
         <li>경제: [빅스텝]-박혜정</li>
+        <li>경제: [직장인의 은퇴없는 실전 주식투자]-차영주</li>
     </p></pre>
 
     <p><pre>
