--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -140,8 +140,10 @@
           - 위대한 기업에 투자하라 - 필립 피셔<br><br>
 
      <a href="https://www.youtube.com/watch?v=1qn-8Gk2I04" target="_blank" title="버핏지수">
-        버핏지수(Buffett Indicator)로 살펴보는 대한민국 증시 밸류에이션, 고평가일까 저평가일까</a><br>
+        버핏지수(Buffett Indicator)로 살펴보는 대한민국 증시 밸류에이션, 고평가일까 저평가일까</a><br><br>
 
+     <a href="https://www.youtube.com/watch?v=cL-S5rQeC9s" target="_blank" title="박성득">
+       15세 주방보조에서 1000억대 자산가, 현대약품 제 1대 주주가 된 슈퍼개미 박성득</a>
 
 
       <ol class="table">
