--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -799,8 +799,10 @@
         세상을 구한 남자, 조던 피터슨 이야기</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=5LgKT-Lx9bk" target="_blank" title="부의흐름">
-        가난한 사람은 평생 거부하는 부의 흐름을 타고 경제적 자유를 얻는 방법</a><br>
+        가난한 사람은 평생 거부하는 부의 흐름을 타고 경제적 자유를 얻는 방법</a><br><br>
 
+      <a href="https://www.youtube.com/watch?v=Ji9YDe2aMZ4&index=3" target="_blank" title="호오포노포노">
+        잠재의식 바꾸는 주문 호오포노포노</a><br>
 
 
 
