--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -230,11 +230,14 @@
       <a href="https://www.youtube.com/watch?v=uWBOsmN8nlc" target="_blank" title="블소">
         착한 게임 블레이드앤소울은 어쩌다 변해버렸을까</a><br>
 
-      <a href="https://www.youtube.com/watch?v=pnXCTOIc8Po&list=WL&index=3&t=0s" target="_blank" title="2020년 1월 게임">
+      <a href="https://www.youtube.com/watch?v=pnXCTOIc8Po&t=0s" target="_blank" title="2020년 1월 게임">
         2020년 1월 신작게임 기대작 TOP5</a><br>
 
-      <a href="https://www.youtube.com/watch?v=j5HJpMElQ70&list=WL&index=2&t=342s" target="_blank" title="용사게임">
+      <a href="https://www.youtube.com/watch?v=j5HJpMElQ70&t=342s" target="_blank" title="용사게임">
         갓겜 서비스한 놈들 어딨냐?[용사식당]</a><br>
+
+      <a href="https://www.youtube.com/watch?v=DsinGnDevEk&t=0s" target="_blank" title="아스텔리아">
+        넥슨 빼버리고 잘 나가네...? 그럼 본섭은? 아스텔리아 이야기</a><br>
 
     <br>
 
