--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -43,7 +43,11 @@
       [앞으로 10년 경제 대위기가 온다]-정동희<br>
       [부의 본능]-브라운스톤<br>
       [빅스텝]-박혜정<br>
-      [직장인의 은퇴없는 실전 주식투자]-차영주
+      [직장인의 은퇴없는 실전 주식투자]-차영주<br>
+      [에이트]-이지성<br>
+      [주식투자 매도하는 법부터 배워라]-김중근<br>
+      [전설로 떠나는 월가의 영웅]-피터 린치
+
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
       [약자를 위한 현실주의]-이주희
@@ -78,6 +82,9 @@
         <li>경제: [부의 본능]-브라운스톤</li>
         <li>경제: [빅스텝]-박혜정</li>
         <li>경제: [직장인의 은퇴없는 실전 주식투자]-차영주</li>
+        <li>경제: [에이트]-이지성</li>
+        <li>경제: [주식투자 매도하는 법부터 배워라]-김중근</li>
+        <li>경제: [전설로 떠나는 월가의 영웅]-피터 린치</li>
     </p></pre>
 
     <p><pre>
