--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -354,7 +354,11 @@
       메인사이트의 다변화와 이커머스 시장의 Hot 키워드-컨텐츠, 커뮤니티</a><br>
 
     <a href="https://www.youtube.com/watch?v=W-ZARauLKc8" target="_blank" title="블록체인">
-      블록체인 기술이 꿈꾸는 미래시장 거래 시스템의 변화</a>
+      블록체인 기술이 꿈꾸는 미래시장 거래 시스템의 변화</a><br>
+
+    <a href="https://www.youtube.com/watch?v=jA5zMiXjcK4&t=0s" target="_blank" title="디즈니">
+      야심차게 모아온 디즈니의 원기옥, 디즈니 플러스+ 문을 열다</a><br>
+
 
   <h2>에스오디</h2>
 
