--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -237,7 +237,17 @@
         갓겜 서비스한 놈들 어딨냐?[용사식당]</a><br>
 
       <a href="https://www.youtube.com/watch?v=DsinGnDevEk&t=0s" target="_blank" title="아스텔리아">
-        넥슨 빼버리고 잘 나가네...? 그럼 본섭은? 아스텔리아 이야기</a><br>
+        넥슨 빼버리고 잘 나가네...? 그럼 본섭은? 아스텔리아 이야기</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=p1pESPumn0k&t=0s" target="_blank" title="해외모바일게임">
+        2020년 모바일 게임 기대작 TOP5[파트3] 역대급 해외 모바일 게임 출시</a>
+
+          <p>
+            롤모바일, 디아블로 이모탈, 파스오브엑자일, 레전드오브룬테라, 원신
+          </p>
+
+      <a href="https://www.youtube.com/watch?v=miux_IuAqVM&t=0s" target="_blank" title="검사모">
+        2년 전 검사모는 이런 폐기물이 아니었다</a><br>
 
     <br>
 
