--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -140,11 +140,19 @@
           - 위대한 기업에 투자하라 - 필립 피셔<br><br>
 
      <a href="https://www.youtube.com/watch?v=1qn-8Gk2I04" target="_blank" title="버핏지수">
-        버핏지수(Buffett Indicator)로 살펴보는 대한민국 증시 밸류에이션, 고평가일까 저평가일까</a><br><br>
+        버핏지수(Buffett Indicator)로 살펴보는 대한민국 증시 밸류에이션, 고평가일까 저평가일까</a><br>
 
      <a href="https://www.youtube.com/watch?v=cL-S5rQeC9s" target="_blank" title="박성득">
-       15세 주방보조에서 1000억대 자산가, 현대약품 제 1대 주주가 된 슈퍼개미 박성득</a>
+       15세 주방보조에서 1000억대 자산가, 현대약품 제 1대 주주가 된 슈퍼개미 박성득</a><br>
 
+     <a href="https://www.youtube.com/watch?v=2NxiIjJhJY8" target="_blank" title="실패이유">
+       개인투자자가 주식에서 실패하는 이유</a><br>
+
+     <a href="https://www.youtube.com/watch?v=Z_P9bfvbXd0" target="_blank" title="AI기업">
+       '1조 예산' 손정의 테마 AI인공지능 기업 제대로 알고 투자</a><br>
+
+     <a href="" target="_blank" title="하락장">
+       하락장의 끝은 어디일까</a><br>
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
