--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -802,8 +802,10 @@
         가난한 사람은 평생 거부하는 부의 흐름을 타고 경제적 자유를 얻는 방법</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=Ji9YDe2aMZ4&index=3" target="_blank" title="호오포노포노">
-        잠재의식 바꾸는 주문 호오포노포노</a><br>
+        잠재의식 바꾸는 주문 호오포노포노</a><br><br>
 
+      <a href="https://www.youtube.com/watch?v=3nAAfDc3heI" target="_blank" title="워렌버핏">
+        [워렌 버핏] 모두 이해하려 하지마</a><br>
 
 
        <ol class="table">
