--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
 <head>
   <title>GRUZAM ENTERTAINMENT</title>
   <meta charset="utf-8">
+  <script>
+    function backColorHandler(self){
+      var target = document.querySelector('body');
+      if(self.value==='black'){
+        target.style.backgroundColor = 'black';
+        target.style.color = 'white';
+        self.value = 'white';
+
+        var links = document.querySelectorAll('a');
+        var i = 0;
+        while(i<links.length){
+          links[i].style.color='white';
+          i=i+1;
+        }
+      } else {
+        target.style.backgroundColor ='white';
+        target.style.color = 'black';
+        self.value = 'black';
+
+
+        var links = document.querySelectorAll('a');
+        var i = 0;
+        while(i<links.length){
+          links[i].style.color='black';
+          i=i+1;
+        }
+      }
+    }
+  </script>
   <link rel="stylesheet" href="style.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -49,29 +78,7 @@
     </p>
 
     <input type="button" value="black" onclick="
-      var target = document.querySelector('body');
-      if(this.value==='black'){
-        target.style.backgroundColor = 'black';
-        target.style.color = 'white';
-        this.value = 'white';
-
-        var links = document.querySelectorAll('a');
-        var i = 0;
-        while(i<links.length){
-          links[i].style.color='white';
-          i=i+1;
-        }
-      } else {
-        target.style.backgroundColor ='white';
-        this.value = 'black';
-
-        var links = document.querySelectorAll('a');
-        var i = 0;
-        while(i<links.length){
-          links[i].style.color='black';
-          i=i+1;
-        }
-      }
+      backColorHandler(this);
     ">
 
     <br><br>
@@ -87,6 +94,7 @@
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
     /*
     var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
     this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
     this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
     };
