--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -27,6 +27,7 @@
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -68,6 +69,8 @@
       [82년생 김지영]-조남주<br>
       [잠]-베르나르 베르베르<br>
       [삼국지]-나관중
+    <h3><strong>자기계발</h3></strong>
+      [기획자의 습관]-최장순
     </p></pre>
 
 
@@ -85,6 +88,7 @@
         <li>경제: [에이트]-이지성</li>
         <li>경제: [주식투자 매도하는 법부터 배워라]-김중근</li>
         <li>경제: [전설로 떠나는 월가의 영웅]-피터 린치</li>
+        <li>자기계발: [기획자의 습관]-최장순</li>
     </p></pre>
 
     <p><pre>
@@ -121,6 +125,7 @@
       <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
       <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
       <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+      <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
     </ol>
 
   </div>
