--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -27,6 +27,7 @@
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -359,14 +360,21 @@
     <a href="https://www.youtube.com/watch?v=jA5zMiXjcK4&t=0s" target="_blank" title="디즈니">
       야심차게 모아온 디즈니의 원기옥, 디즈니 플러스+ 문을 열다</a><br>
 
+    <a href="https://www.youtube.com/watch?v=QZFDZeqbp4g&t=0s" target="_blank" title="수요부족사회">
+      '수요'부족 사회, 성장을 향한 우리의 해법은 있을까?</a><br>
+
+    <a href="https://www.youtube.com/watch?v=UzqtGVG1vFs" target="_blank" title="우리나라 자전거">
+      고전하고 있는 우리나라 자전거와 희망</a><br>
+
 
   <h2>에스오디</h2>
 
     <a href="https://www.youtube.com/watch?v=cI1lGlCSkIQ" target="_blank" title="신기술">
-      삼성의 비장의 무기, 모든 학과가 투입되는 신의 기술</a>
+      삼성의 비장의 무기, 모든 학과가 투입되는 신의 기술</a><br>
 
     <a href="https://www.youtube.com/watch?v=s5ycTo0JCCw&list=WL&index=3&t=0s" target="_blank" title="Bioprinting">
-      중국이 만들어낸 미친 물질... 한계를 뛰어넘은 중국의 소름돋는 기술력</a>
+      중국이 만들어낸 미친 물질... 한계를 뛰어넘은 중국의 소름돋는 기술력</a><br>
+
 
 
   <br>
@@ -377,6 +385,7 @@
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   </div>
