--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -27,6 +27,7 @@
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -247,7 +248,17 @@
           </p>
 
       <a href="https://www.youtube.com/watch?v=miux_IuAqVM&t=0s" target="_blank" title="검사모">
-        2년 전 검사모는 이런 폐기물이 아니었다</a><br>
+        2년 전 검사모는 이런 폐기물이 아니었다</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=xzS7BEiqWGo" target="_blank" title="로스트아크">
+        로스트아크는 갓겜인가? 망겜인가?</a></br><br>
+
+      <a href="https://www.youtube.com/watch?v=YT6DHVfkeeQ" target="_blank" title="게임광기예술">
+        하다보면 정신이 나갈 것 같은 게임들</a>
+
+        <p>
+          파 크라이3, 스펙 옵스 더 라인, 헬블레이드:세누아의회
+        </p>
 
     <br>
 
@@ -257,6 +268,7 @@
       <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
       <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
       <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+      <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
     </ol>
   </div>
 </div>
