--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <!--
