--- a/5_stock_investment.html
+++ b/5_stock_investment.html
@@ -28,6 +28,7 @@
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_stock_investment.html" class="active">Stock Investment</a></li>
+    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -151,8 +152,305 @@
      <a href="https://www.youtube.com/watch?v=Z_P9bfvbXd0" target="_blank" title="AI기업">
        '1조 예산' 손정의 테마 AI인공지능 기업 제대로 알고 투자</a><br>
 
-     <a href="" target="_blank" title="하락장">
+     <a href="https://www.youtube.com/watch?v=RQvutrGjUfE" target="_blank" title="하락장">
        하락장의 끝은 어디일까</a><br>
+
+     <a href="https://www.youtube.com/watch?v=oU4rZxPPBIo" target="_blank" title="4차 산업혁명">
+       50배, 100배 나올까? 한국의 4차 산업혁명 관련 중소기업 살펴보기</a><br><br>
+
+     <a href="https://www.youtube.com/watch?v=PzE98U0xa1U" target="_blank" title="피터린치">
+       월가의 영웅, 피터린치</a>
+
+       <p>
+         린치의 투자 철학<br>
+         * 자신이 잘 아는 분야에 투자하라(Invest in what you know)<br>
+         * 10루타(Ten Begger): 10개의 종목에 분산투자해도
+           하나의 10루타 종목이 등장하면 계좌 전체의 수익률을 끌어올릴 수 있다.<br>
+         * PEG: 주가를 주당순이익(EPS)으로 나눈 주가수익비율(PER)을 다시 연평균 예상 EPS증가율로 나눈 것<br>
+           PEG < 0.5 이상일 경우 이익증가 대비 저평가로 판단
+       </p>
+
+      <a href="https://www.youtube.com/watch?v=TE1u9jtOUtg&t=5s" target="_blank" title="주식투자">
+        주식투자로 돈을 벌지 못하는 이유</a><br>
+
+      <a href="https://www.youtube.com/watch?v=0nAI_TheOJ8" target="_blank" title="한국AI기술">
+        일본은 상상도 못할 인공지능 기술을 한국이 세계에 공개</a><br>
+
+      <a href="https://www.youtube.com/watch?v=JnLEgd8toYA" target="_blank" title="주식오타쿠BNF">
+        4000억원 자산 주식오타쿠 일본의 트레이더 BNF</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=PK9L24RbBDk" target="_blank" title="수익인증">
+        1년 반동안 주식투자로 45억 수익, 인증합니다</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=W0qIoCdFBOY" target="_blank" title="상식">
+        주식초보가 꼭 알아야 할 10가지 상식들</a><br>
+
+        <p>
+          1. 증권사는 환전창구 그 이상도 이하도 아니다<br>
+          2. 유료리딩 하는 애들 = 주식으로 돈 벌 자신이 없는 애들<br>
+          3. 주가는 여론조사 결과가 아니다<br>
+          4. 실력없는 친구들끼리 모여도 시너지가 발생하지 않는다<br>
+          5. 뉴스에 매수 금지<br>
+          6. 자신이 모르는 영역은 건드리지 않는다<br>
+          7. '주식 전문가'라는 말은 없다<br>
+          8. 증권사 리포트에는 매도의견이 없다<br>
+          9. 손절가와 목표가를 유동적으로 정해라<br>
+          10. 재무제표가 좋지 않은 종목은 미래가 없다<br>
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=YW0otkpTfSU" target="_blank" title="손절타이밍">
+        KB금융 3억 1천만원 손실 후기, 손절 타이밍과 원칙?</a><br>
+
+        <p>
+          대형주: 손절(상승장), 손절(하락장)<br>
+          - 상승장이든 하락장이든 본인이 생각하는 손절 기준을 넘어선다면 무조건 손절<br>
+            대형주의 경우 한 번 하락흐름이 나온 다음에는 공매도가 늘어나는 경우가 많아서<br>
+            추세를 반전시키는데 시간이 너무 오래 걸린다<br>
+          소형주: 유동적(상승장), 추가매수(하락장)<br>
+          - 관심 있는 종목의 현재가보 5%에서 10% 정도 낮은 가격에 매수주문을 넣고 대기<br>
+            매수 주문이 체결되면 회사에 나쁜 뉴스가 있는 것이 아닌지 확인<br>
+            그런 것이 없다면 그대로 보유하고 투자<br>
+          테마주: 유동적(상승장), 유동적(하락장)<br>
+          - 회사 본질의 가치와는 다르게 주가가 움직이기 때문에 손절 여부를 결정하기 쉽지 않다<br>
+            만약 테마주를 매집한 주체가 보인다면 세력이 그 종목을 어느 정도 평단가에 보유하고 있는지 계산<br>
+            보유한 종목의 평단가가 주식을 매집한 주체보다 높으면서 주식 전체 거래량이 감소하고 있다면 손절<br>
+            보유하고 있는 테마주의 테마가 소멸하거나 회사의 재무제표가 악화될 경우 손절<br>
+            그 외에는 추가 매수를 하거나 보유(테마는 돌고 돌기 때문)<br><br>
+
+          원칙1: 새로운 종목으로 갈아타기 위해서 손절하지 않음<br>
+          원칙2: 손절을 한 금액은 1주일간 사용하지 않음<br>
+          (손절을 했다는 자체가 이미 잘못된 투자를 했다는 것을 의미하므로 시간과 여유를 가지고 매매)
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=2Lo8LPdOo1k" target="_blank" title="정치테마주대장주">
+        정치테마주 매매시 대장주 찾는 방법</a><br>
+
+        <p>
+          정치테마주 뿐만 아니라 모든 테마주를 매매할 때 항상 대장주를 매매해야 된다<br>
+          어떤 테마에 반응하여 상승과 하락이 나오는 종목들을 테마주라고 한다<br>
+          특정 테마의 테마주들 중 가장 강력하게 상승하는 종목이 대장주<br>
+          호재가 발생했을 때 가장 크게 상승하는 것도 대장주고<br>
+          악재가 발생했을 때 가장 적게 하락하는 종목도 대장주다<br>
+          네이버 검색창에 000(정치인 이름) 관련주라고 검색<br>
+          연관검색어 조사<br>
+          두 개 이상의 종목이 연관검색어에 나올 경우 먼저 나오는 종목이 더 수급이 강한 종목<br>
+          대장주의 정의 자체가, 호재가 발생했을 때 가장 강하게 상승이 나오는 종목이다<br>
+          그러기 위해서는 뉴스나 블로그, 카페에서도 가장 많이 언급이 되어야 하며<br>
+          투자자들도 다른 테마주에 비해 더 많이 검색을 해야지만<br>
+          어떤 특정 종목이 특정 테마의 대장주가 될 수 있다
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=sosCj61cefg" target="_blank" title="가치투자">
+        주식으로 100억을 벌기 위해서 알아야 할 가치투자의 개념</a>
+
+        <p>
+          가치투자를 해야하는 것은 맞습니다<br>
+          그러나 대부분의 가치투자자들은 어떤 회사가 보유한 자산이나 실적에 대해서만 관심을 가지고<br>
+          저평가라는 이유로 수급이나 유동성이 아쉬운 종목을 매수하는 경우를 많이 봐왔습니다<br>
+          이런 종목들은 언젠가 수익을 주기는 하겠지만<br>
+          언제 주식이 오를지는 아무도 모르는 것이고<br>
+          최악의 경우 시장 평균 수익률에 못 미치는 경우가 많습니다<br><br>
+          1. 투자자들이 수익을 내기 위해서 해야 할 것은<br>
+          회사의 가치를 평가하는 것이 아니라 주식의 가치를 평가하는 것입니다<br>
+          제가 생각하는 가치에는 다양한 종류가 있습니다<br>
+          첫 번째로 회사의 대표, 임직원들의 능력, 흔히 인적 자산이라고 합니다<br>
+          두 번째로는 회사의 보유 자산과 현재의 실적입니다<br>
+          세 번째로는 회사가 보유한 기술과 사업분야의 가치<br>
+          네 번째는 수급적인 측면<br>
+          특정 회사가 다른 회사에 비해 많은 투자자들의 선택을 받는 경우가 있습니다<br>
+          예를 들면 유명한 사람이 어떤 회사에 투자했다는 뉴스와<br>
+          유통물량이 부족하여 품절주로 분류된다는 기사 모두 여기에 포함됩니다<br>
+          자신의 돈을 투자하면서 '가치'가 없는 회사에 투자를 하는 투자자는 없습니다<br>
+          각 종목마다 다양한 가치가 있으며<br>
+          투자자들은 이 가치들을 서로 다르게 평가하여 주식을 매수하고 매도합니다<br>
+          이 과정에서 성공적으로 가치를 평가한 투자자는 수익을 내고<br>
+          그렇지 못할 경우 손실이 발생합니다<br><br>
+          2. 본인이 평가한 어떤 회사의 가치가 많은 사람들에게 인정을 받을 경우<br>
+          주가는 저평가에서 적정가로 수렴하게 됩니다<br>
+          너무나 당연하게도 증권사 증권 전문가의 추천이 있을 경우<br>
+          많은 투자자들에게 쉽게 가치를 인정받아 저평가 상태를 벗어나는 경우가 많습니다<br>
+          더 나아가서는 주가가 과열되어 고평가 되는 경우도 있으니 조심해야 합니다<br><br>
+          3. 성공한 투자자가 수익중이거나 손실중인 종목을 추종 매수하는 것은 가치투자가 아니며<br>
+          투자하는 회사의 가치를 어떤 방식으로 어떻게 평가 하였는지를<br>
+          성공한 투자자들로부터 배워야 합니다<br><br>
+          우리가 투자를 하는 목적 10년~20년 미래를 보고 기업과 동행하기 위해서가 아닙니다<br>
+          우리가 주식을 매수하는 궁극적인 이유는 주식을 비싸게 팔아서 수익을 내기 위해서고<br>
+          그러기 위해서는 누군가가 내가 산 가격보다 비싸게 주식을 사줄 사람이<br>
+          여러 명 있을 주식을 찾아서 매수하면 됩니다<br><br>
+
+          회사의 가치를 평가 = 부동산 자산, 영업실적 등 숫자에 중점을 두어 회사를 분석하고
+          좋은 회사라고 판단되어 매수 후 장기투자(가치투자로 잘못 이해하는 사람들이 있음)<br><br>
+
+          주식의 가치를 평가 = 내가 산 주식을 나보다 비싸게 사 줄 투자자가 있는지를 다양한 관점에서
+          분석하고 매수 후 익절(=가치투자)
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=w0MYncBHCTU" target="_blank" title="기술적분석">
+        주식투자에 필요한 기술적 분석, 영상 하나로 끝내드립니다</a>
+
+        <p>
+          차트 = 보조지표<br>
+          주식 투자를 하기 위해 알아야 할 기술적 분석은 세 개 정도<br><br>
+          1. 추세 판단<br>
+          20일 평균선이 가장 위에 위치하고,
+          60일 평균선이 가장 중앙에,
+          120일 평균선이 제일 밑에 위치한 차트를 정배열이라고 합니다.
+          또한 이것의 반대 경우를 역배열이라고 합니다.
+          정배열은 최근에 주가가 상승하고 있는 추세라는 것을 의미하며,
+          역배열은 최근에 주가가 하락하고 있는 추세라는 것을 의미합니다.
+          정배열 종목은 짧게 단타의 관점에서 진입하는 것을 권장드리며,
+          역배열 종목은 바닥을 확인하고 장기투자의 관점에서 진입하는 것을 권장드립니다.
+          그 이유는 정배열 종목은 관성이 위로 향하고 있지만,
+          리스크에 비해 기대할 수 있는 리턴이 크지는 않습니다.
+          따라서단타이 관점에서 진입해야 합니다.
+          반대로 역배열 종목은 관성이 아래로 향하고 있지만,
+          주식은 무한정 아래로 떨어지지는 않습니다.
+          만약 자산에 비해 저평가된 상태라고 판단된다면,
+          바닥을 확인하신 후 장기투자의 관점에서 진입하시면
+          기술적인 상승을 기대하실 수 있습니다.<br><br>
+
+          2. 고점과 저점의 판단<br>
+          상승추세 또는 하락추세에 있는 종목이 있다고 가정합니다.
+          이 종목이 추세가 전환되는 지점은 어떻게 알 수 있을까요?
+          상승추세의 종목은 장대양봉 후 장대음봉이 나오는 경우,
+          상승추세가 끝난다는 의미입니다.
+          반대로 하락추세의 종목은, 장대음봉 후 장대양봉이 나올 경우,
+          하락추세가 끝난다는 의미입니다.
+          장대양봉에는 항상 거래량이 급증하게 됩니다.
+          이것은 해당 캔들에 해당되는 가격에
+          매수한 투자자들이 많다는 의미입니다.
+          이 상태에서 장대음봉이 나온다는 의미는
+          많은 투자자들이 자신이 매수한 가격보다
+          낮은 가격에 주식을 팔아야 한다는 의미이며
+          상승추세가 멈추고 하락이 가속화 될 수 밖에 없다는 것을 의미합니다.
+          반대의 경우도 마찬가지 입니다.<br><br>
+
+          3. 심리적 저항과 지지<br>
+          9400원짜리 종목이 9700원까지 상승하는 것과
+          9800원짜리 종목이 10100원까지 상승하는 것 중 어느 것이 더 어려울까요?
+          정답은 후자입니다.
+          1000원 단위 10000원 단위의 호가는 다른 호가에 비해 저항이 큰 편입니다.
+          그러나 만약 큰 심리적 저항을 이겨내고 돌파에 성공한다면
+          저항이 지지로 바뀌게 됩니다.
+          따라서 저는 가격이 9만원 중후반인 종목을 매수할 때는
+          항상 이 종목이 10만원 부근의 호가를 돌파할 수 있는
+          모멘텀이 있는지를 판단합니다.
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=RteANh-wC9E" target="_blank" title="에이치엘비">
+        에이치엘비 12억 매수하였습니다, 주식투자, 가치투자, 공매도</a>
+
+        <p>
+          어떤 기준으로 제가 에이치엘비를 투자하겠다고 판단했는지 알려드리도록 하겠습니다.<br>
+          우선 첫 번째는 차트입니다. 에이치엘비는 장기간 하락추세이며, 현재 가격은 52주 최저가 근처입니다.
+          저는 매수시점이 매도시점보다 훨씬 중요하다고 생각합니다.
+          주식 매도는 수익구간이라면 아무 때나 하면 되지만
+          매수는 굉장히 신중하게 해야지 심리적으로 안정이 되기 때문입니다.
+          에이치엘비 주주분들 중 저보 평단가가 낮은 분들은
+          최근 10개월 동안 없었다는 점은 앞으로 주가가 상승하더라도
+          차익실현 물량이 적게 나온다는 의미로 해석하였습니다.<br>
+          두 번째는 늘어나는 공매도 물량입니다.
+          저는 개인적으로 장기간 하락추세이면서
+          공매도 물량이 계속 증가하는 종목을 선호합니다.
+          빌려간 돈은 반드시 갚아야 하는 것처럼
+          빌려간 주식도 언젠가는 갚아야 합니다.
+          외국 증권사들은 조금의 추세변화만 있더라도
+          공매도 물량을 상환하는 경우가 많기에
+          저는 공매도가 많이 걸려있는 종목을 선호합니다.
+          에이치엘비는 최근 1주일동안 공매도 과열종목으로 3번 지정되었습니다.
+          만약 주가가 현재 가격을 유지하는 선에서 공매도가 계속 늘어난다면
+          결국 공매도 물량이 상환되는 시점에서 주가가 상승할 수 밖에 없습니다.
+          회사관계자를 포함한 그 누구도 임상결과를 정확히 미리 알지는 못합니다.
+          바이오섹터의 종목들은 현재 보유한 자산과 실적이 거의 없기 때문에
+          공매도 세력들이 개미투자자들의 불안감을 자극하여
+          주가를 하락시켜 수익을 내는 패턴이 자주 보입니다.<br>
+          세 번째는 커뮤니티의 충성도입니다.
+          제가 많은 종목들을 공부해봤지만 셀트리온과 메지온 그리고 에이치엘비
+          이 세 종목은 회사를 향한 주주들의 충성도가 굉장히 높았습니다.
+          새로 진입하는 투자자 입장에서는 주가 하락이 어느 정도 방어되고,
+          주가가 상승하더라도 자신이 설정한 목표가 이하의 가격에는 매도하지 않는 주주가 많기에
+          개인적으로 충성도가 높은 종목을 선호하는 편입니다.
+          어떤 종목의 충성도 해당 종목 단톡방의 인원과 활성화를 확인하시거나
+          아니면 종목토론방에 가서 해당종목에 대한 부정적인 글을 올렸을 때
+          조회수와 비추천의 개수를 비교하는 방법으로 확인하실 수 있습니다.
+          그 외에도 주주총회에 참석하는 인원수 등으로도 파악할 수 있습니다.<br>
+          네 번째로는 회사측의 주가 부양 의지입니다.
+          에이치엘비 회사 게시판을 보면
+          회사측에서 루머에 실시간으로 대응하고 있는 모습이 보입니다.
+          재무제표가 부실한 기업의 경우
+          퍼드가 퍼질 경우 순식간에 확산되기 때문에
+          회사측의 빠른 대응이 필요합니다.
+          에이치엘비측의 대응은 제가 본 코스닥 기업중 가장 신속하고 정확하기에 신뢰가 갑니다.
+          마지막으로 저는 리보세라닙이 성공적으로 개발되더라도
+          에이치엘비에 대한 실적으로 이어질 수 있을지에 대한
+          의구심을 가지고 있었습니다.
+          하지만 최근 지배계층의 개편으로 인해
+          이러한 우려가 완전히 해소되었으며
+          토러스투자증권에서는 에이치엘비 목표가 165,700으로 제시하였습니다.
+          저는 2가지 측면에서 에이치엘비를 접근할 수 있다고 봅니다.
+          우선 첫 번째는 단타의 관점입니다.
+          현재 에이치엘비는 장기 하락추세에 있으나
+          공매도가 늘어나는 것에 비해 하락이 가속회되고 있지는 않습니다.
+          임상결과 발표를 앞두고 기대감으로 인해 매수 심리가 살아날 수 있기에
+          한 번쯤 상승이 나오게 되면 공매도 물량도 어느정도 상환되면서
+          7만원 중반부근까지는 쉽게 반등이 나올 수 있는 자리라고 봅니다.
+          또한 최근 임상결과 발표를 앞둔 메지온에서도
+          비슷한 패턴이 나와서 10만원 아래에서
+          반등과 추세변화가 한 번 나온 것을 생각해보면
+          에이치엘비에서도 그러한 모습을 기대할 수 있습니다.
+          두 번째 관점은 장기투자의 관점입니다.
+          현재 개발하고 있는 기술과 관련해서
+          자세한 설명은 하지 않겠지만
+          지금까지 발표된 논문과 임상결과가 사실이라고 가정할 경우
+          임상3상을 통과할 가능성이 높다고 저는 판단하였습니다.
+          하지만 헬릭스미스의 사례처럼
+          3상 결과 발표가 연기될 가능성도 있기에
+          장기투자를 하기에는 어느 정도 리스크가 존재한다고 봅니다.
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=GpppyCYxhME" target="_blank" title="주식시장메타">
+        최근 주식시장에서의 메타, 흐름 2가지</a>
+
+        <p>
+          1. 묻지마 신규상장주 투기<br>
+          2. 시가총액이 적은 종목의 큰 상승<br>
+          이러한 종목은 모두가 관심을 가질 때가 매도를 고민해야 할 시점이고
+          모두가 관심이 없을 때가 장기투자를 고려해야 할 시점입니다.
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=bJdXHKaLga8" target="_blank" title="대북주">
+        대북주? 주식투자? 영상 하나로 정리해드립니다</a>
+
+        <p>
+          세력이 없는 종목은 다음과 같이 확인할 수 있습니다.
+          7월 1일 시초가가 그날의 고가인 종목은
+          세력이 없거나 주가를 올릴 의도가 없다고 보셔도 무방합니다.
+          반대로 이날 상한가를 가는 종목이 발생할 경우
+          힘이 강한 종목이라고 보시면 될 듯 합니다
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=6l0hnvy4FtA" target="_blank" title="정치테마주">
+        정치테마주에 대한 개인적인 생각</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=L9xG6qCMl8U" target="_blank" title="작전주">
+        두올산업 5억 6천 수익 인증, 상한가 작전주 올르기 전에 매수하는 방법</a><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
@@ -160,6 +458,7 @@
         <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
         <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
         <li><a href="5_stock_investment.html" class="active">Stock Investment</a></li>
+        <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
       </ol>
 
   </div>
