--- a/2_karazhan_library.html
+++ b/2_karazhan_library.html
@@ -26,8 +26,9 @@
     <li><a href="2_karazhan_library.html" class="active">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+    <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -47,7 +48,8 @@
       [직장인의 은퇴없는 실전 주식투자]-차영주<br>
       [에이트]-이지성<br>
       [주식투자 매도하는 법부터 배워라]-김중근<br>
-      [전설로 떠나는 월가의 영웅]-피터 린치
+      [전설로 떠나는 월가의 영웅]-피터 린치<br>
+      [기업공시 완전 정복]-김수헌
 
     <h3><strong>역사</h3></strong>
       [거의 모든 IT의 역사]-정지훈<br>
@@ -62,7 +64,8 @@
       [침묵이라는 무기]-코르넬리아 토프<br>
       [마음을 훔치는 대화법]-임철웅
     <h3><strong>과학</h3></strong>
-      [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트
+      [창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
+      [기억은 미래로 향한다]-한나 모니어, 마르틴 게스만
     <h3><strong>경영</h3></strong>
       [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단
     <h3><strong>소설</h3></strong>
@@ -80,7 +83,7 @@
         <li>역사:</li>
         <li>철학: [그래서 철학이 필요해]-고바야시 쇼테이</li>
         <li>심리학/처세술:</li>
-        <li>과학:</li>
+        <li>과학: [기억은 미래로 향한다]</li>
         <br>
         <li>경제: [부의 본능]-브라운스톤</li>
         <li>경제: [빅스텝]-박혜정</li>
@@ -89,6 +92,7 @@
         <li>경제: [주식투자 매도하는 법부터 배워라]-김중근</li>
         <li>경제: [전설로 떠나는 월가의 영웅]-피터 린치</li>
         <li>자기계발: [기획자의 습관]-최장순</li>
+        <li>경제: [기업공시 완전 정복]-김수헌</li>
     </p></pre>
 
     <p><pre>
@@ -124,8 +128,9 @@
       <li><a href="2_karazhan_library.html" class="active">Karazhan Library</a></li>
       <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
       <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-      <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-      <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+      <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+      <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+      <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
     </ol>
 
   </div>
