--- a/3_youtube_study.html
+++ b/3_youtube_study.html
@@ -26,8 +26,9 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+    <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -384,8 +385,9 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="active">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+    <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   </div>
