--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -26,8 +26,9 @@
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
     <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
     <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
-    <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+    <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -260,6 +261,16 @@
           파 크라이3, 스펙 옵스 더 라인, 헬블레이드:세누아의회
         </p>
 
+      <a href="https://www.youtube.com/watch?v=qC0xlUDej0A" target="_blank" title="테일즈위버">
+        넥슨 아니었으면 섭종했을지도 모를 게임, 테일즈위버 이야기</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=frR2VZRmWyY" target="_blank" title="닌텐도스위치">
+        닌텐도 스위치 '프로'가 출시될 지도 모른다고?</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=00lzu1pNvDM" target="_blank" title="콘솔게임">
+        무려 한국에서 개발하고 있는 콘솔게임이 있다고?</a><br>
+
+
     <br>
 
     <ol class="table">
@@ -267,8 +278,9 @@
       <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
       <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
       <li><a href="4_game_industry_trends.html" class="active">Game Industry Trends</a></li>
-      <li><a href="5_stock_investment.html" class="inactive">Stock Investment</a></li>
-      <li><a href="6_Inside_Out.html" class="inactive">Inside Out</a></li>
+      <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+      <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
+      <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
     </ol>
   </div>
 </div>
