--- a/6_stock_investment.html
+++ b/6_stock_investment.html
@@ -1040,6 +1040,61 @@
           이게 사실 답이고 제가 알고 있는 지식의 끝이거든요.
         </p>
 
+      <a href="https://www.youtube.com/watch?v=RPx3YFfLlUY" target="_blank" title="100억 인증">
+        은행가서 100억 수표 출금하고 인증합니다</a><br>
+
+          <p>
+            저는 진짜 주식으로 돈 벌 생각 있는 사람들 중에서
+            주식호가창을 하루종일 보고 있는 사람들이 가장 이해가 안가요.
+            맨날 매매를 하려고 하시는 분들이 가장 이해가 안가요.
+            매수는 정말 필요할 때만 하는거고,
+            매도는 손절을 안한다는 생각으로 주식을 하면 돼요.
+            물론 손절을 안하려면 이상한 주식을 사면 안돼요.
+
+            이상한 주식 = 이미 다 오른 주식
+
+            저는 주식 살 때 보통 52주 치저가 한 번 찍은 종목을 사요.
+            왜냐하면 그건 지하 3층인지 지하 4층인진 몰라도
+            지하 6,7층까지는 안내려갈 거라는 생각을 하고 사요.
+            물론 내려갈 수도 있는데 어쨌든 올라올 확률이 높긴 하죠?
+            그 회사가 제대로 된 회사고 테마가 제대로 된 테마면.
+
+            손절을 할 때도 저는 분할로 매도를 하거든요.
+            안그러고 그냥 호가창 몇개 밀어버리면 매도를 하시는 분들이 계세요.
+            물론 사람마다 스타일 차이긴 하지만, 꾸준히 분할 매도를 하시는 게 좋아요.
+            자기 포트폴리오에 마이너스가 찍혀있는 걸 혐오하시는 분들이 있어요.
+            그런 분들은 꼴보기 싫다고 한 번에 쫙 팔고 잊어버려야지 하시는데
+            손절을 하실 때도 타이밍이나 각 같은 걸 잘 재신 다음에
+            최상의 환경에서 손실을 최소화 하는 방향으로 손절을 하셔야 돼요.
+
+            저는 약간 옛날도 그렇고 지금도 그런데
+            제가 어떤 주식을 만원에 샀는데
+            그 주식이 만오백원이 됐어요.
+            그러면 일단 절반은 매도하고 봐요.
+            절반 매도를 하는 이유는,
+            그 주식이 만오백원이 된 다음에 구천오백원으로 내려갈 수가 있어요.
+            사람들이 보통 수익구간이던 종목이 손실구간으로 돌아서면 멘탈이 깨지거든요.
+            저는 그걸 막으려고 5% 수익만 있으면 일단 분할 매도를 해요.
+            만오백원에 절반을 익절하면 구천오백원일 때 손절을 해도 손실이 아니에요.
+            저도 주식 유튜브들 되게 많이 보거든요.
+            이게 구독자 몇 명 없으신 분이 알려준 기법인데 은근히 도움이 되더라고요.
+            수익은 무조건 옳다는 생각으로 접근하는 게 좋아요.
+            만원짜리 주식을 만오백원에 팔았는데 삼만원이 됐다.
+            전혀 기분 나빠할 이유가 없어요.
+            왜냐면 일단 수익은 수익대로 생겼고,
+            새로운 종목을 진입할 기회를 얻었고,
+            삼만원이 되었다는건 여러분이 종목을 선정하는 안목이 틀리지 않았다는 거에요.
+            이건 장기적으로 여러분들이 그 안목을 가지고 주식을 하면 반드시 성공할 수 있다는 보증수표에요.
+
+            여러분들은 종목 교체를 자주 하는 방법으로 매매전략을 짰으면 좋겠어요.
+            제가 미국 주식을 하는 사람이었으면
+            되게 좋아보이는 종목 10년, 20년 사서 묵혀두고
+            배당받을 것 같은데 여기는 미국이 아니잖아요?
+            여러분들이 주식투자를 하는데는 다양한 이유가 있겠지만
+            저는 수익을 극대화하는 입장에서는 다소 리스크를 감수하더라도
+            포트폴리오 교체를 좀 자주자주 해주는 게 좋다고 생각해요.
+            수익이 나면 바로바로 익절하고요.
+          </p>
 
 
 
@@ -1052,6 +1107,9 @@
 
 
 
+
+
+      <br><br>
 
       <ol class="table">
         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
