--- a/7_inside_out.html
+++ b/7_inside_out.html
@@ -37,6 +37,14 @@
 
     <h1>Inside Out</h1><br><br><br>
 
+      [January 21th, 2020]
+        <p>
+          활을 쏘기 위해서는 시위를 당겨야 하고,
+          화살을 더 멀리 보내려면 시위를 더 많이 당겨야 하며,
+          정확한 타이밍에 쏘려면 시위를 당긴채로
+          언제까지고 기다릴 수 있어야 한다.
+        </p>
+
       [January 18th, 2020]
         <p>
           분산 투자의 범위는 확장되어야 한다.
