--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -268,7 +268,21 @@
         닌텐도 스위치 '프로'가 출시될 지도 모른다고?</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=00lzu1pNvDM" target="_blank" title="콘솔게임">
-        무려 한국에서 개발하고 있는 콘솔게임이 있다고?</a><br>
+        무려 한국에서 개발하고 있는 콘솔게임이 있다고?</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=k6NnUDRLlOc" target="_blank" title="게임심리학">
+        사람들은 왜 뽑기를 할까? 게임에 돈 쓰게 만드는 심리적 트릭들</a><br>
+
+          <p>
+            변동비율강화(variable ratio reinforcement)
+            니어미스 효과(near-miss effect)
+            자이가르닉 효과(Aeigarnik effect)
+            손실 회피(loss aversion)
+            마음의 회계(mental accounting)
+            현상 유지 편향(status quo bias)
+            문간에 발 들여놓기 기법(foot-in-the-door technique)
+            닻 효과(anchoring effect)
+          </p>
 
 
     <br>
