--- a/5_AI_industry_trends.html
+++ b/5_AI_industry_trends.html
@@ -49,6 +49,14 @@
       <a href="https://www.youtube.com/watch?v=MwtN8C3o8dk" target="_blank" title="삼성NEON">
         1인 사회에 꼭 필요한 삼성 NEON의 인공 인간</a><br><br>
 
+      <a href="https://www.youtube.com/watch?v=8RiHLNJOgoo" target="_blank" title="특이점">
+        인공지능에 대해 우리가 간과하고 있는 무서운 사실!(특이점이 온다)</a><br>
+
+
+
+
+
+      <br>
 
        <ol class="table">
          <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
