--- a/4_game_industry_trends.html
+++ b/4_game_industry_trends.html
@@ -284,6 +284,9 @@
             닻 효과(anchoring effect)
           </p>
 
+      <a href="https://www.youtube.com/watch?v=7t4bFHz89hA&t=0s" target="_blank" title="실수">
+        잘나가던 게임도 한순간에 망하는 단 하나의 실수</a><br><br>
+
 
     <br>
 
