--- a/5_AI_industry_trends.html
+++ b/5_AI_industry_trends.html
@@ -50,10 +50,10 @@
         1인 사회에 꼭 필요한 삼성 NEON의 인공 인간</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=8RiHLNJOgoo" target="_blank" title="특이점">
-        인공지능에 대해 우리가 간과하고 있는 무서운 사실!(특이점이 온다)</a><br>
+        인공지능에 대해 우리가 간과하고 있는 무서운 사실!(특이점이 온다)</a><br><br>
 
-
-
+      <a href="https://www.youtube.com/watch?v=0IyYNkbgBHY" target="_blank" title="삼성">
+        삼성이 인공지능 26위에서 1위로 도약 위해 전세계에서 불러모으는 한국천재들</a><br>
 
 
       <br>
