--- a/6_stock_investment.html
+++ b/6_stock_investment.html
@@ -1096,9 +1096,8 @@
             수익이 나면 바로바로 익절하고요.
           </p>
 
-
-
-
+      <a href="https://www.youtube.com/watch?v=Bb94KLL9ufY" target="_blank" title="헬릭스미스">
+        헬릭스미스 임상 실패.. 앞으로 코스닥 시장의 미래는?[메지온, 에이치엘비]</a>
 
 
 
