--- a/1_show_yourself.html
+++ b/1_show_yourself.html
@@ -25,11 +25,13 @@
   <ol class="table">
     <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+    <li><a href="3_the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
+    <li><a href="6_science_and_technology.html" class="inactive">Science & Technology</a></li>
+    <li><a href="7_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="8_the_economist.html" class="inactive">The Economist</a></li>
+    <li><a href="9_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -807,18 +809,99 @@
         잠재의식 바꾸는 주문 호오포노포노</a><br><br>
 
       <a href="https://www.youtube.com/watch?v=3nAAfDc3heI" target="_blank" title="워렌버핏">
-        [워렌 버핏] 모두 이해하려 하지마</a><br>
+        [워렌 버핏] 모두 이해하려 하지마</a><br><br>
+
+      <a href="https://www.youtube.com/watch?v=Q4LIC4M5h1w" target="_blank" title="재물의신">
+        재물의 신 호설암</a><br>
+
+        <p>
+          1. 현재 처한 어려움은 일시적이다<br>
+          2. 가장 이윤이 많은 장사는 사람에 대한 투자다<br>
+          3. 의(義)에서 재물을 구하라<br>
+          4. 위험을 두려워해서는 안된다<br>
+            위험이 없는 사업은 누구나 할 수 있으니 어떻게 두각을 나타낼 수 있겠느냐.
+            위험이 따르지 않는 사업은 누구든지 할 수 있고 그만큼 이윤도 작다.
+            성공을 위해서라면 칼날에 묻은 피를 핥을 수 있을 만큼의 배짱을 지녀야 하며
+            전 재산을 날리는 한이 있더라도 과감하게 밀고 나가야 부를 얻을 수 있다.<br>
+          5. 세상에 완전한 인재는 없다<br>
+            사람의 가장 큰 능력은 사람을 쓰는 일이다.
+            사람을 쓰려면 우선 사람을 볼 줄 알아야 하고,
+            그 사람의 성격과 기질, 품덕 등을 정확하게 이해할 수 있어야 한다.
+            안목과 재능을 겸비한 재목을 찾아내 활용할 수 있다면
+            성공은 이미 손에 쥔 것이나 다름 없다.
+            인재란 어느 한 부분에서 특별한 강점을 보이는 동시에
+            다른 부분에서는 치명적인 결점을 드러내는 경우가 대부분이다.
+            따라서 뛰어난 경영자라면 단점보다는 장점을 잘 살리면서
+            그 능력에 맞는 성과를 거두는 안목이 필요하다.
+            큰 재목은 크게 쓰고, 작은 재목은 작게 쓰면 된다.<br>
+          6. 손해가 때론 득이 되어 돌아온다<br>
+            세상을 살다보면 한쪽에서 이득을 보고
+            다른쪽에서 손해를 보는 일을 피할 수가 없다.
+            경우에 따라서는 손해를 보는 일이 득이 될 수 있다.
+            손해를 보는 것은 다른 이에게 인정을 베풀고 있다는 뜻이다.
+            이러한 인정은 기회가 되면 적절한 보답으로 돌아온다.
+            모든 현상과 사물에는 양면성이 있듯이
+            어떤 현상이 극에 달하면 반드시 돌아선다.
+            어떤 물건의 귀함이 극에 이르면 다시 천해지고
+            천함이 극에 이르면 다시 귀해진다.
+            따라서 귀한 것을 흙으로 여길 줄 알아야 하고,
+            천한 것을 보물로 받아들일 줄 알아야 부를 얻을 수 있다.<br>
+          7. 부는 지키는 것이 더 어렵다
+        </p>
+
+      <a href="https://www.youtube.com/watch?v=Kvq1mJlMa8g" target="_blank" title="인간관계">
+        좋아하는 사람만 만나도 성공하는 인간관계법</a>
+
+        <p>
+          1. 명함으로 인맥을 관리하던 시대는 끝났다<br>
+            자연스럽게 만나게 된 사람들 중에서
+            자신에게 의미있는 사람과 지속적인 인간관계를 구축하는 편이 훨씬 효율적이다.<br>
+          2. 지금은 조직에 속하지 않은 능력있는 개인이 등장하는 시대이다<br>
+            능력있는 개인이 한 조직에 속하지 않고 여러개의 명함을 가지고 있을 수 있다.
+            눈 앞에 있는 사람은 분명 한 명의 개인이지만 그 사람이 서너 개의 직업을 가지고 있다면
+            서너 명의 사람과 함께 있는 것과 마찬가지다.
+            그렇다면 무조건 많은 사람을 만나려고 하는 것보다
+            관심사가 비슷하고 여러 분야의 경험을 가진 한 사람과
+            좋은 관계를 맺는 것이 더 효율적이다.
+            이제는 어떤 사람을 만나든 회사나 배경에 얽매이지 말고
+            그 사람 자체가 가진 경력과 관심사,
+            그리고 나와의 연결성을 더 유심히 따져보는 것이 도움이 된다.<br>
+          3. 얇고 넓은 인맥을 쌓아도 정작 필요할 때 도움이 되지 못한다<br>
+            필요할 때 정말 제대로 된 도움을 줄 수 있는 사람은
+            내가 억지로 쌓은 인맥이 아니라
+            내 인맥 밖의 거대한 세상에 있는 능력 있는 사람일 가능성이 훨씬 크다.<br>
+          4. 사람을 한 명 더 만날 시간에 당신의 내면을 만나는 게 훨씬 더 이익이다
+            정보를 아주 쉽게 손에 넣을 수 있는 정보화 시대이기에
+            지금 중요한 것은 정보 획득이 아니라
+            자신의 내면에서 어떤 방식으로 정보를 처리하고
+            내 생각과 결합할 것인지에 대한 고민이다.
+            우리는 원하든 원하지 않든 정보에 대량 노출이 된다.
+            전 세계의 정보가 저절로 손안에 들어오는 현대 사회에서는
+            의식적으로라도 자신의 내면을 들여다보는 시간이 필요하다.
+            따라서 사람을 만나는 대신 나 자신의 내면을 만나는 것이 훨씬 좋다.
+            떠돌아다니는 정보는 누구나 가질 수 있는 흔한 것이지만
+            개인의 내면에서 여러 정보와 경험, 생각이 함께 섞이고 쌓이면서
+            누구도 뺏어가고 모방할 수 없 나만의 정보와 지식이 축적된다.<br>
+
+          핀포인트 인간관계의 3가지 법칙<br>
+            1. 이익보다 '호감'이라는 감정을 중시하라<br>
+            2. 좋은 사람을 만났다면 깊은 관계를 쌓아라<br>
+            3. 불편한 사람은 지하철역 개찰구로 여겨라<br>
 
 
-       <ol class="table">
-         <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
-         <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
-         <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
-         <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-         <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-         <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
-         <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
-       </ol>
+      <ol class="table">
+        <li><a href="1_show_yourself.html" class="active">Show Yourself</a></li>
+        <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+        <li><a href="3_the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+        <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+        <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+        <li><a href="6_science_and_technology.html" class="inactive">Science & Technology</a></li>
+        <li><a href="7_stock_investment.html" class="inactive">Stock Investment</a></li>
+        <li><a href="8_the_economist.html" class="inactive">The Economist</a></li>
+        <li><a href="9_inside_out.html" class="inactive">Inside Out</a></li>
+      </ol>
+
+
 
   </div>
 </div>
