--- a/5_AI_industry_trends.html
+++ b/5_AI_industry_trends.html
@@ -25,11 +25,13 @@
   <ol class="table">
     <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
     <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
+    <li><a href="3_the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
     <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
     <li><a href="5_AI_industry_trends.html" class="active">AI Industry Trends</a></li>
-    <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
+    <li><a href="6_science_and_technology.html" class="inactive">Science & Technology</a></li>
+    <li><a href="7_stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="8_the_economist.html" class="inactive">The Economist</a></li>
+    <li><a href="9_inside_out.html" class="inactive">Inside Out</a></li>
   </ol>
 
   <div id="contents">
@@ -58,15 +60,17 @@
 
       <br>
 
-       <ol class="table">
-         <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
-         <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
-         <li><a href="3_youtube_study.html" class="inactive">Youtube Study</a></li>
-         <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-         <li><a href="5_AI_industry_trends.html" class="active">AI Industry Trends</a></li>
-         <li><a href="6_stock_investment.html" class="inactive">Stock Investment</a></li>
-         <li><a href="7_inside_out.html" class="inactive">Inside Out</a></li>
-       </ol>
+      <ol class="table">
+        <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
+        <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
+        <li><a href="3_the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+        <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+        <li><a href="5_AI_industry_trends.html" class="active">AI Industry Trends</a></li>
+        <li><a href="6_science_and_technology.html" class="inactive">Science & Technology</a></li>
+        <li><a href="7_stock_investment.html" class="inactive">Stock Investment</a></li>
+        <li><a href="8_the_economist.html" class="inactive">The Economist</a></li>
+        <li><a href="9_inside_out.html" class="inactive">Inside Out</a></li>
+      </ol>
 
   </div>
 </div>
