--- a/3_the_war_of_genesis.html
+++ b/3_the_war_of_genesis.html
@@ -309,9 +309,15 @@
       인공지능 그리고 머신러닝의 모든 것</a>
 
 
+  <h2>기타 코딩</h2>
+
+    <a href="https://www.youtube.com/watch?v=dezEtzkXk1U" target="_blank" title="앱 개발">
+      난 프로그래밍 앱 개발을 어떻게 배웠는가?</a><br>
+      
 
 
-  <br>
+
+  <br><br><br>
 
   <ol class="table">
     <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
