--- a/5_AI_industry_trends.html
+++ b/5_AI_industry_trends.html
@@ -39,23 +39,32 @@
 
     <h1>AI Industry Trends</h1><br><br><br>
 
-      <a href="https://www.youtube.com/watch?v=0nAI_TheOJ8" target="_blank" title="한국AI기술">
-        일본은 상상도 못할 인공지능 기술을 한국이 세계에 공개</a><br><br>
 
-      <a href="https://www.youtube.com/watch?v=7xEmzM9mFVs" target="_blank" title="문대통령">
-        문 대통령"AI 1등 국가... 사람 중심 4차 산업혁명"</a><br><br>
+    <a href="https://www.youtube.com/watch?v=UwsrzCVZAb8" target="_blank" title="적정선">
+      적정선은 어디인가?</a><br>
 
-      <a href="https://www.youtube.com/watch?v=KKf8uiMl6jU" target="_blank" title="인공지능 1등국가">
-        인공지능 1등국가 도약 원년...AI 미디어 집중 지원</a><br><br>
+    <a href="https://www.youtube.com/watch?v=g9c5BMlvEyI" target="_blank" title"한국인공지능">
+      천재 뇌과학자가 말하는 한국 인공지능의 미래</a><br>
 
-      <a href="https://www.youtube.com/watch?v=MwtN8C3o8dk" target="_blank" title="삼성NEON">
-        1인 사회에 꼭 필요한 삼성 NEON의 인공 인간</a><br><br>
+    <a href="https://www.youtube.com/watch?v=0IyYNkbgBHY" target="_blank" title="삼성">
+      삼성이 인공지능 26위에서 1위로 도약 위해 전세계에서 불러모으는 한국천재들</a><br>
 
-      <a href="https://www.youtube.com/watch?v=8RiHLNJOgoo" target="_blank" title="특이점">
-        인공지능에 대해 우리가 간과하고 있는 무서운 사실!(특이점이 온다)</a><br><br>
+    <a href="https://www.youtube.com/watch?v=8RiHLNJOgoo" target="_blank" title="특이점">
+      인공지능에 대해 우리가 간과하고 있는 무서운 사실!(특이점이 온다)</a><br>
 
-      <a href="https://www.youtube.com/watch?v=0IyYNkbgBHY" target="_blank" title="삼성">
-        삼성이 인공지능 26위에서 1위로 도약 위해 전세계에서 불러모으는 한국천재들</a><br>
+    <a href="https://www.youtube.com/watch?v=MwtN8C3o8dk" target="_blank" title="삼성NEON">
+      1인 사회에 꼭 필요한 삼성 NEON의 인공 인간</a><br>
+
+    <a href="https://www.youtube.com/watch?v=KKf8uiMl6jU" target="_blank" title="인공지능 1등국가">
+      인공지능 1등국가 도약 원년...AI 미디어 집중 지원</a><br>
+
+    <a href="https://www.youtube.com/watch?v=7xEmzM9mFVs" target="_blank" title="문대통령">
+      문 대통령"AI 1등 국가... 사람 중심 4차 산업혁명"</a><br>
+
+    <a href="https://www.youtube.com/watch?v=0nAI_TheOJ8" target="_blank" title="한국AI기술">
+      일본은 상상도 못할 인공지능 기술을 한국이 세계에 공개</a><br>
+
+
 
 
       <br>
