--- a/6_science_and_technology.html
+++ b/6_science_and_technology.html
@@ -39,15 +39,14 @@
   <h1>Science & Technology</h1><br><br><br>
 
 
-  <h2>에스오디</h2>
-
     <a href="https://www.youtube.com/watch?v=cI1lGlCSkIQ" target="_blank" title="신기술">
       삼성의 비장의 무기, 모든 학과가 투입되는 신의 기술</a><br>
 
     <a href="https://www.youtube.com/watch?v=s5ycTo0JCCw&list=WL&index=3&t=0s" target="_blank" title="Bioprinting">
       중국이 만들어낸 미친 물질... 한계를 뛰어넘은 중국의 소름돋는 기술력</a><br>
 
-
+    <a href="https://www.youtube.com/watch?v=iaZS0CGZz5A" target="_blank" title="배터리">
+      배터리 치킨게임 시작 시점 분석</a><br>
 
   <br>
 
