--- a/8_the_economist.html
+++ b/8_the_economist.html
@@ -38,7 +38,7 @@
 
   <h1>The Economist</h1><br><br><br>
 
-  
+
 
   <h2>슈카월드</h2>
 
@@ -93,6 +93,10 @@
     <a href="https://www.youtube.com/watch?v=UzqtGVG1vFs" target="_blank" title="우리나라 자전거">
       고전하고 있는 우리나라 자전거와 희망</a><br>
 
+    <a href="https://www.youtube.com/watch?v=6dp4E5HIpRU" target="_blank" title="반도체시장">
+      AMD와 인텔의 반백년 전쟁과 2020년 불타오르는 반도체시장</a><br>
+
+    
 
 
 
