--- a/index.html
+++ b/index.html
@@ -62,17 +62,23 @@
   <h2 style="text-align:center" id="subtitle">찰나를 울리는 영원의 메아리 - 삶의 방향성을 바꾸는 게임</h2>
 
 <div id="grid">
-  <ol class="table">
-    <li><a href="1_show_yourself.html" class="inactive">Show Yourself</a></li>
-    <li><a href="2_karazhan_library.html" class="inactive">Karazhan Library</a></li>
-    <li><a href="3_the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
-    <li><a href="4_game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
-    <li><a href="5_AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
-    <li><a href="6_science_and_technology.html" class="inactive">Science & Technology</a></li>
-    <li><a href="7_stock_investment.html" class="inactive">Stock Investment</a></li>
-    <li><a href="8_the_economist.html" class="inactive">The Economist</a></li>
-    <li><a href="9_inside_out.html" class="inactive">Inside Out</a></li>
-  </ol>
+  <ul class="table">
+    <font size="7">Inventory</font>
+    <li><a href="show_yourself.html" class="inactive">Show Yourself</a></li>
+    <li><a href="karazhan_library.html" class="inactive">Karazhan Library</a></li>
+    <li><a href="inside_out.html" class="inactive">Inside Out</a></li>
+    <br>
+    <font size="7">Status</font>
+    <li><a href="game_industry_trends.html" class="inactive">Game Industry Trends</a></li>
+    <li><a href="AI_industry_trends.html" class="inactive">AI Industry Trends</a></li>
+    <li><a href="science_and_technology.html" class="inactive">Science & Technology</a></li>
+    <li><a href="the_economist.html" class="inactive">The Economist</a></li>
+    <br>
+    <font size="7">Skills</font>
+    <li><a href="the_war_of_genesis.html" class="inactive">The War of Genesis</a></li>
+    <li><a href="stock_investment.html" class="inactive">Stock Investment</a></li>
+    <li><a href="strategy_and_tactics.html" class="inactive">Strategy & Tactics</a></li>
+  </ul>
 
   <!--
   <ol>
