--- a/AI_industry_trends.html
+++ b/AI_industry_trends.html
@@ -47,6 +47,9 @@
     <h1>AI Industry Trends</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=aSxW4iVUBEM" target="_blank" title="에스오디">
+      교수들이 푸는데 6년이 걸린 초고난도 문제를 접한 인공지능의 답이 과학자들을 경악시키다</a><br>
+
     <a href="https://www.youtube.com/watch?v=lrv8ga02VNg" target="_blank" title="TheAgeofAI">
       A.I.를 이용해 더 나은 인간 만들기</a><br>
 
