--- a/game_industry_trends.html
+++ b/game_industry_trends.html
@@ -45,6 +45,9 @@
     <h1>Game Industry Trends</h1><br><br><br>
 
 
+      <a href="https://www.youtube.com/watch?v=NgWdv081oqQ" target="_blank" title="레드셀">
+        전직 특수부대원이 하는 FPS 게임 '콜오브듀티 모던워페어'</a><br>
+
       <a href="https://www.youtube.com/watch?v=7HjSF8GFwr0" target="_blank" title="일랜시아">
         리니지도 울고갈 악마의 게임 일랜시아 이야기</a><br>
 
