--- a/strategy_and_tactics.html
+++ b/strategy_and_tactics.html
@@ -46,6 +46,9 @@
     <h1>Strategy & Tactics</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=Cvlisl5ud0E" target="_blank" title="국방TV">
+      판도를 바꾼 작전사</a><br>
+
     <a href="https://www.youtube.com/watch?v=PCaMrfTLeYw" target="_blank" title="YTN SCIENCE">
       13척의 기적, 명량대첩</a><br>
 
