--- a/stock_investment.html
+++ b/stock_investment.html
@@ -46,6 +46,25 @@
     <h1>Stock Investment</h1><br><br><br>
 
 
+    <a href="https://www.youtube.com/watch?v=pfkQePEfciw" target="_blank" title="시간여행TV">
+      정치테마주에 대한 주관적인 의견</a>
+
+      <p>
+        주식시장에서는(특히 테마주) 논리를 찾으면 안돼요.
+        논리를 찾지말고 그냥 수급에 따라 어떠 종목이 크게 갈지를 생각을 해보세요.
+        출마를 해서 당선이든 낙선이든 이게 중요한게 아니라
+        많은 사람들의 관심을 받는게 중요해요.
+        정치테마주는 딱 터지는 날이 정해져있어요.
+        총선 관련해서는 1,2월에 터질거고요.
+        대선테마주는 대선 주자 결정되는 그 시즌 있잖아요.
+        그 시즌이 딱 고점이에요.
+        대통령 선거 당일까지 들고가면 미친 사람인거에요.
+        정치테마주가 패턴만 익히면 쉽거든요.
+        그냥 이것만 기억하세요.
+        이미 오른 테마주는 안사고 아직 안오른 테마주를 산다.
+        왜냐하면 다 순환하면서 돌고 돌거든요.
+      </p>
+
     <a href="https://www.youtube.com/watch?v=y1fleQFKbbc" target="_blank" title="레이달리오">
       투자왕 레이달리오, 앞으로 10년의 투자를 예언하다</a><br>
 
